@@ -7,6 +7,8 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
   * apt-pkg/depcache.cc:
     - if a M-A:same package is marked for reinstall, mark all it's installed
       silbings for reinstallation as well (LP: #859188)
+  * apt-pkg/contrib/configuration.cc:
+    - do not stop parent transversal in FindDir if the value is empty
 
   [ Steve Langasek ]
   * cmdline/apt-get.cc:
@@ -20,7 +22,7 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
     - use a signed int instead of short for score calculation as upgrades
       become so big now that it can overflow (Closes: #657732, LP: #917173)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 29 Jan 2012 15:22:50 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 30 Jan 2012 13:07:30 +0100
 
 apt (0.8.16~exp12) experimental; urgency=low
 
